# labs

lab1/: CMakeLists.txt  MatrixFunctions.cpp  MatrixFunctions.h  lab1.cpp  main
lab2/: Resource.cpp  Resource.h  main  main.cpp
lab2/hard/: ResourceTable.cpp  ResourceTable.h  main  main.cpp
lab3/: main  main.cpp
